--- a/style.css
+++ b/style.css
@@ -227,3 +227,16 @@ section{
 
 .skill-box:nth-child(2) .percentage:after{height: 75%;}
 .skill-box:nth-child(4) .percentage:after{height: 50%;}
+
+#informativa .info{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  text-align: center;
+}
+
+#informativa .info .info-row{margin: 0 40px;}
