--- a/style.css
+++ b/style.css
@@ -253,3 +253,41 @@ section{
 #informativa .info .info-row:nth-child(1){color: #800080;}
 #informativa .info .info-row:nth-child(3){color: #008000;}
 #informativa .info .info-row:nth-child(4){color: #f1b400;}
+
+#contact-me{
+  width: 100%;
+  padding: 0;
+  background: #2777b7;
+}
+
+#contact-me iframe{
+  width: 60%;
+  height: 100vh;
+}
+
+.contact-info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 55px;
+}
+
+.contact-item{margin: 40px;}
+.contact-info a{
+  color: #808080;
+  margin: 0 25px;
+  -webkit-transition: color 500ms ease-in-out;
+  -moz-transition: color 500ms ease-in-out;
+  -ms-transition: color 500ms ease-in-out;
+  -o-transition: color 500ms ease-in-out;
+  transition: color 500ms ease-in-out;
+}
+
+.contact-info a:hover{color: #464646;}
+
+footer{
+  text-align: center;
+  background: #1f1f1f;
+  padding: 25px 0;
+}
